# LinguagemC

./: README.md
algoritmos/: ordenacao  recu
autotools/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
autotools/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
autotools/doc/: Makefile  Makefile.in  README.md
autotools/examples/: Makefile  Makefile.in
autotools/man/: Makefile  Makefile.in  teste.1
autotools/scripts/: Makefile  Makefile.in  script-teste.sh
autotools/src/: Makefile  Makefile.am  Makefile.in  teste  teste.c
autotools/src/.deps/: teste.Po
bibliotecas/dinâmica/: explicação.txt  foo.c  foo.h  main
bibliotecas/estática/: a.c  a.h  explicação.txt  main  main.c
cmake/: CMakeLists.txt  main.c
gtkdemo/: builder.ui  gtkdemo.c
make/: func.c  func.h  main  main.c  makefile
ncurses/: paint  paint.c  paint2.c
outros/: README.md  alocacao.c  cano.c  cmdarg.c  cmdarg2.c  memfor.c  obj.c  pointers  pointers.c  processos.c  shellprg.c  wrfile.c
posix/: standards.c  std  template.c
socket/: client  client.c  server  server.c
